# enterprise-knowledge-copilot

./: .env.example  .gitignore  AGENTS.md  Makefile  create_dirs.sh  docker-compose.yml  project_structure.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
apps/api/app/: main.py
apps/api/tests/: test_health.py
apps/worker/: __init__.py
apps/worker/app/: __init__.py  main.py
data/raw/official_docs/vllm/: sampling_parameters.md
data/raw/release_notes/qdrant/: release_notes.md
docs/: architecture_overview.md  deployment.md  evaluation_framework.md  milestones.md  observability.md  problem_statement.md  product_requirements.md  roadmap.md
docs/adr/: 0004-frontend-choice.md  0005-cloud-provider-choice.md  0006-queue-choice.md
scripts/: ingest_docs.py
