[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "packages*"]
exclude = ["data*", "docs*"]

[project]
name = "enterprise-knowledge-copilot"
version = "0.1.0"
description = "Production-grade enterprise knowledge copilot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "qdrant-client>=1.10.0",
  "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "ruff>=0.6.0",
  "pre-commit>=3.8.0",
]

[tool.pytest.ini_options]
testpaths = ["apps"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
exclude = ["data/"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
